--- a/index.html
+++ b/index.html
@@ -13,13 +13,20 @@
         <div class="lista-film"></div>
 
 <!-- HB template -->
+
+        <!-- FILMS -->
         <script id="entry-template" type="text/x-handlebars-template">
           <ul>
               <li>Titolo: {{title}} </li>
-              <li>Titolo originale: {{title}}</li>
+              <li>Titolo originale: {{or_title}}</li>
               <li>Lingua: {{language}}</li>
               <li>Voto: {{vote}}</li>
           </ul>
+        </script>
+
+        <!-- NOT FOUND -->
+        <script id="nullo-template" type="text/x-handlebars-template">
+          <h3>La ricerca non ha dato risultati per '{{not_found}}'</h3>
         </script>
 
         <script src="js/script.js" charset="utf-8"></script>
