--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
         <div class="lista-film"></div>
 
 <!-- HB template -->
-
-        <!-- FILMS -->
+        <!-- FOUND-->
         <script id="entry-template" type="text/x-handlebars-template">
           <ul>
               <li>Titolo: {{title}} </li>
               <li>Titolo originale: {{or_title}}</li>
-              <li>Lingua: {{language}}</li>
+              <li>Lingua: {{{language}}}</li>
               <li>Voto: {{{vote}}}</li>
+              <li>Tipo: {{tipo}}</li>
+
           </ul>
         </script>
 
