--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                       <li>Lingua: <span> {{{language}}}</span></li>
                       <li>Voto: <span> {{{vote}}}</span></li>
                       <li>Tipologia: <span> {{tipo}}</span></li>
+                      <li>Trama: <span> {{overview}}</span></li>
                   </ul>
               </div>
           </div>
